Name:                cryptohash
Version:             0.5.1
Description:
    A collection of crypto hashes, with a practical incremental and one-pass, pure APIs,
    with performance close to the fastest implementations available in others languages.
    .
    The implementations are made in C with a haskell FFI wrapper that hide the C implementation.

License:             BSD3
License-file:        LICENSE
Author:              Vincent Hanquez
Maintainer:          vincent@snarc.org
Synopsis:            collection of crypto hashes, fast, pure and practical
Category:            Data, Cryptography
Build-Type:          Simple
Cabal-Version:       >=1.6
data-files:          README

extra-source-files:
  cbits/bitfn.h cbits/md2.h cbits/md4.h cbits/md5.h
  cbits/ripemd.h cbits/sha1.h cbits/sha256.h cbits/sha512.h
  cbits/skein.h cbits/skein256.h cbits/skein512.h
  cbits/tiger.h

Flag test
  Description:       Build unit test
  Default:           False

Library
  Build-Depends:     base >= 3 && < 5, bytestring
  Extensions:        ForeignFunctionInterface
  Exposed-modules:   Data.CryptoHash.SHA1
                     Data.CryptoHash.SHA224
                     Data.CryptoHash.SHA256
                     Data.CryptoHash.SHA384
                     Data.CryptoHash.SHA512
                     Data.CryptoHash.MD2
                     Data.CryptoHash.MD4
                     Data.CryptoHash.MD5
                     Data.CryptoHash.RIPEMD160
                     Data.CryptoHash.Skein256
                     Data.CryptoHash.Skein512
                     Data.CryptoHash.Tiger
  ghc-options:       -Wall -O2 -optc-O3 -fno-cse
  C-sources:         cbits/sha1.c
                     cbits/sha256.c
                     cbits/sha512.c
                     cbits/md2.c
                     cbits/md4.c
                     cbits/md5.c
                     cbits/ripemd.c
                     cbits/skein256.c
                     cbits/skein512.c
                     cbits/tiger.c
  Include-Dirs:      cbits

Executable           Tests
  Main-Is:           Tests.hs
  Extensions:        ForeignFunctionInterface
  C-sources:         cbits/sha1.c
                     cbits/sha256.c
                     cbits/sha512.c
                     cbits/md2.c
                     cbits/md4.c
                     cbits/md5.c
                     cbits/ripemd.c
                     cbits/skein256.c
                     cbits/skein512.c
                     cbits/tiger.c
  if flag(test)
    Buildable:       True
    Build-depends:   base >= 3 && < 5, HUnit, bytestring
  else
    Buildable:       False

source-repository head
  type:     git
  location: git://github.com/vincenthz/hs-cryptohash
